horizontal scrolling fixed

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
 }
 
 * {
+  border: 1px solid red;
   margin: 0;
   padding: 0;
 }
@@ -221,8 +222,8 @@
 
 .littleParagraph {
   font-style: normal;
-  font-size: 16px;
-  margin-top: 14px;
+  font-size: 14px;
+  margin-top: 4px;
   font-weight: 400;
   line-height: 24px;
   padding: 0 24px 0 24px;
